--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
 			</div>
 
 			<div>
-				<label for="favcolor">Favorite Color</label>
-				<input type="color" id="favcolor" name="favcolor">
+				<label for="favColor">Favorite Color</label>
+				<input type="color" id="favColor" name="favcolor">
 			</div>
 
 			<div>
